--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,6 @@ os:
   - linux
 script:
   - go build -race
-  - $HOME/gopath/bin/goveralls -service=travis-ci
+  - go test -v -covermode=count -coverprofile=coverage.out
+  - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
+
